<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <DUT Name="E_EventType" Id="{384ffa41-be68-43fe-862f-a5a6a7c9e679}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_EventType :
(
	Message := 0,
	Alarm :=1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>