<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <DUT Name="TriggerData" Id="{c9559741-57a4-48dc-9632-1cda34b304f8}">
    <Declaration><![CDATA[TYPE TriggerData :
STRUCT
	nActivationCount: UDINT := 0;
	bTriggered : BOOL;
	
	GetEventTrigger : R_TRIG;
		

	timerDebounceTimer :TON;
	



	
	SendEventTrigger : R_TRIG;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>